- prevent overflow x on lists for ios

--- a/src/app/themes/volumio/browse/volumio-browse.scss
+++ b/src/app/themes/volumio/browse/volumio-browse.scss
@@ -42,6 +42,7 @@
 
 #browseTablesWrapper {
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .rowTitle {
